--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet build --no-restore
       
     - name: Package
-      run: dotnet publish -c Release --output ./publish
+      run: dotnet publish -c Release --output ./publish --framework net8.0
 
     - name: Create Release
       id: create_release
