--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,13 +29,16 @@ jobs:
     - name: Package
       run: dotnet publish -c Release --output ./publish --framework net8.0
 
+    - name: Add SHORT_SHA env property with commit short sha
+      run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.sha }}
+        tag_name: ${SHORT_SHA}
         release_name: Release ${{ github.sha }}
         draft: false
         prerelease: false
