--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${GITHUB_SHA::7}
+        tag_name: ${{github.sha::7}}
         release_name: Release ${{ github.sha }}
         draft: false
         prerelease: false
