--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,19 +12,14 @@ jobs:
     runs-on: windows-latest
 
     steps:
-
-    - name: Set short git commit SHA
-      id: vars
-      run: |
-        calculatedSha=$(git rev-parse --short ${{ github.sha }})
-        echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
-    
-    - name: Confirm git commit SHA output
-      run: echo ${{ env.COMMIT_SHORT_SHA }}
-
     - name: Checkout Repo
       uses: actions/checkout@v3
-    
+
+    - name: short-sha
+      uses: benjlevesque/short-sha@v2.2
+      with:
+          length: 8
+          
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
@@ -45,7 +40,7 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ env.COMMIT_SHORT_SHA }}
+        tag_name: ${{ steps.short-sha.outputs.sha }}
         release_name: Release ${{ github.sha }}
         draft: false
         prerelease: false
