--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./*  # path to your compiled output
+        asset_path: ./CloneDash-Game.Zip  # path to your compiled output
         asset_name: CloneDash-Game.zip  # choose a suitable name for your release asset
         asset_content_type: application/zip
         
