--- a/Nucleus/Nucleus.csproj
+++ b/Nucleus/Nucleus.csproj
@@ -7,6 +7,7 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 
     <IsWindows Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'true'">true</IsWindows>
+    <IsOSX Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">true</IsOSX>
     <IsLinux Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">true</IsLinux>
   </PropertyGroup>
 
@@ -23,7 +24,11 @@
   <PropertyGroup Condition="'$(IsWindows)'=='true'">
     <DefineConstants>COMPILED_WINDOWS</DefineConstants>
   </PropertyGroup>
-  
+
+  <PropertyGroup Condition="'$(IsOSX)'=='true'">
+    <DefineConstants>COMPILED_OSX</DefineConstants>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(IsLinux)'=='true'">
     <DefineConstants>COMPILED_LINUX</DefineConstants>
   </PropertyGroup>
