--- a/Nucleus/Nucleus.csproj
+++ b/Nucleus/Nucleus.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Colorful.Console" Version="1.2.15" />
+    <PackageReference Include="FftSharp" Version="2.2.0" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
