--- a/Nucleus/Nucleus.csproj
+++ b/Nucleus/Nucleus.csproj
@@ -23,6 +23,10 @@
     <ProjectReference Include="..\Raylib-cs\Raylib-cs.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Runtime\" />
+  </ItemGroup>
+
   <PropertyGroup Condition="'$(IsWindows)'=='true'">
     <DefineConstants>COMPILED_WINDOWS</DefineConstants>
   </PropertyGroup>
