--- a/Nucleus/Nucleus.csproj
+++ b/Nucleus/Nucleus.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Colorful.Console" Version="1.2.15" />
     <PackageReference Include="FftSharp" Version="2.2.0" />
+    <PackageReference Include="RectpackSharp" Version="1.2.0" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
