Ignore launchSettings.json

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ ModelViewer/*
 Nucleus.Testbed/*
 NucleusRenderPipelineRefactorTest/*
 ___TempBMS.bms
+Nucleus.ModelEditor/Properties/launchSettings.json
