--- a/CloneDash/CloneDash.csproj
+++ b/CloneDash/CloneDash.csproj
@@ -13,11 +13,12 @@
 
   <ItemGroup>
     <PackageReference Include="BCnEncoder.Net" Version="2.2.0" />
+    <PackageReference Include="CS-Script" Version="4.9.5" />
     <PackageReference Include="Fmod5Sharp" Version="3.0.1" />
     <PackageReference Include="Microsoft.Diagnostics.Runtime" Version="3.1.512801" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
-    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
