--- a/CloneDash/Clone Dash.csproj
+++ b/CloneDash/Clone Dash.csproj
@@ -10,6 +10,7 @@
     <IsOSX Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">true</IsOSX>
     <IsLinux Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">true</IsLinux>
     <AssemblyName>Clone Dash</AssemblyName>
+    <RootNamespace>CloneDash</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
