Add *.DS_Store to gitignore (OS X)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Nucleus.Testbed/*
 NucleusRenderPipelineRefactorTest/*
 ___TempBMS.bms
 Nucleus.ModelEditor/Properties/launchSettings.json
+*.DS_Store
