--- a/CloneDash/Clone Dash.csproj
+++ b/CloneDash/Clone Dash.csproj
@@ -37,6 +37,12 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Compatibility\MDMC\" />
+    <Folder Include="Compatibility\CustomAlbums\" />
+    <Folder Include="Systems\Muse Dash Compatibility\Cross Platform Initializers\" />
+  </ItemGroup>
+
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Condition=" $(IsWindows) == 'true'" Command="xcopy &quot;$(SolutionDir)BuildAssets/universal/.&quot; &quot;$(OutDir)&quot; /Y /E" />
     <Exec Condition=" $(IsOSX) == 'true'" Command="cp -a &quot;$(MSBuildThisFileDirectory)../BuildAssets/universal/.&quot; &quot;$(OutDir)&quot;" />
