--- a/CD_UnityGenAssetLUT/CD_UnityGenAssetLUT.csproj
+++ b/CD_UnityGenAssetLUT/CD_UnityGenAssetLUT.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AssetStudio\AssetStudio.csproj" />
+    <ProjectReference Include="..\CloneDash\Clone Dash.csproj" />
   </ItemGroup>
 
 </Project>
