--- a/CloneDash/Clone Dash.csproj
+++ b/CloneDash/Clone Dash.csproj
@@ -42,24 +42,32 @@
 	</ItemGroup>
 
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-		<Exec Condition=" $(IsWindows) == 'true'" Command="xcopy &quot;$(SolutionDir)BuildAssets/universal/.&quot; &quot;$(OutDir)&quot; /Y /E" />
-		<Exec Condition=" $(IsOSX) == 'true'" Command="cp -a &quot;$(MSBuildThisFileDirectory)../BuildAssets/universal/.&quot; &quot;$(OutDir)&quot;" />
-		<Exec Condition=" $(IsLinux) == 'true'" Command="cp -a &quot;$(MSBuildThisFileDirectory)../BuildAssets/universal/.&quot; &quot;$(OutDir)&quot;" />
+		<ItemGroup>
+			<UniversalAssets Include="$(MSBuildThisFileDirectory)..\BuildAssets\universal\**\*" />
+		</ItemGroup>
+		<Copy SourceFiles="@(UniversalAssets)" DestinationFolder="$(OutDir)%(RecursiveDir)" SkipUnchangedFiles="true" />
 
-		<Exec Condition=" $(IsWindows) == 'true'" Command="xcopy &quot;$(SolutionDir)BuildAssets/winnt/.&quot; &quot;$(OutDir)&quot; /Y /E" />
-		<Exec Condition=" $(IsOSX) == 'true'" Command="cp -a &quot;$(MSBuildThisFileDirectory)../BuildAssets/intel_osx/.&quot; &quot;$(OutDir)&quot;" />
-		<Exec Condition=" $(IsLinux) == 'true'" Command="cp -a &quot;$(MSBuildThisFileDirectory)../BuildAssets/linux/.&quot; &quot;$(OutDir)&quot;" />
+		<ItemGroup Condition="'$(IsWindows)' == 'true'">
+			<PlatformAssets Include="$(MSBuildThisFileDirectory)..\BuildAssets\winnt\**\*" />
+		</ItemGroup>
+		<ItemGroup Condition="'$(IsOSX)' == 'true'">
+			<PlatformAssets Include="$(MSBuildThisFileDirectory)..\BuildAssets\intel_osx\**\*" />
+		</ItemGroup>
+		<ItemGroup Condition="'$(IsLinux)' == 'true'">
+			<PlatformAssets Include="$(MSBuildThisFileDirectory)..\BuildAssets\linux\**\*" />
+		</ItemGroup>
+		<Copy SourceFiles="@(PlatformAssets)" DestinationFolder="$(OutDir)%(RecursiveDir)" SkipUnchangedFiles="true" />
 	</Target>
 
 	<PropertyGroup Condition="'$(IsWindows)'=='true'">
-		<DefineConstants>COMPILED_WINDOWS</DefineConstants>
+		<DefineConstants>$(DefineConstants);COMPILED_WINDOWS</DefineConstants>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(IsOSX)'=='true'">
-		<DefineConstants>COMPILED_OSX</DefineConstants>
+		<DefineConstants>$(DefineConstants);COMPILED_OSX</DefineConstants>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(IsLinux)'=='true'">
-		<DefineConstants>COMPILED_LINUX</DefineConstants>
+		<DefineConstants>$(DefineConstants);COMPILED_LINUX</DefineConstants>
 	</PropertyGroup>
 </Project>
