Add Fmod5Sharp files (need to edit them)

--- a/CloneDash/Clone Dash.csproj
+++ b/CloneDash/Clone Dash.csproj
@@ -19,7 +19,6 @@
 
 	<ItemGroup>
 		<PackageReference Include="BCnEncoder.Net" Version="2.2.0" />
-		<PackageReference Include="Fmod5Sharp" Version="3.0.1" />
 		<PackageReference Include="LuaCSharp" Version="0.4.2" />
 		<PackageReference Include="Microsoft.Diagnostics.Runtime" Version="3.1.512801" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -30,6 +29,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\AssetStudioUtility\AssetStudioUtility.csproj" />
 		<ProjectReference Include="..\AssetStudio\AssetStudio.csproj" />
+		<ProjectReference Include="..\Fmod5Sharp\Fmod5Sharp.csproj" />
 		<ProjectReference Include="..\Nucleus\Nucleus.csproj" />
 		<ProjectReference Include="..\OdinSerializer\OdinSerializer.csproj" />
 		<ProjectReference Include="..\Raylib-cs\Raylib-cs.csproj" />
