--- a/CloneDash/Clone Dash.csproj
+++ b/CloneDash/Clone Dash.csproj
@@ -19,6 +19,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="BCnEncoder.Net" Version="2.2.0" />
+		<PackageReference Include="DiscordRichPresence" Version="1.3.0.28" />
 		<PackageReference Include="LuaCSharp" Version="0.4.2" />
 		<PackageReference Include="Microsoft.Diagnostics.Runtime" Version="3.1.512801" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
