Fmod5Sharp used the wrong function breaking ADPCM

--- a/Fmod5Sharp/Fmod5Sharp.csproj
+++ b/Fmod5Sharp/Fmod5Sharp.csproj
@@ -28,7 +28,8 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
         <PackageReference Include="IndexRange" Version="1.0.2" />
-        <PackageReference Include="NAudio.Core" Version="2.1.0" />
+        <PackageReference Include="NAudio" Version="2.2.1" />
+        <PackageReference Include="NAudio.Core" Version="2.2.1" />
         <PackageReference Include="OggVorbisEncoder" Version="1.2.0" />
         <PackageReference Include="System.Text.Json" Version="9.0.0" />
     </ItemGroup>
