Upgrade SixLabors.ImageSharp
Jimbob strikes again

--- a/CD_UnityGenAssetLUT/CD_UnityGenAssetLUT.csproj
+++ b/CD_UnityGenAssetLUT/CD_UnityGenAssetLUT.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AssetStudio\AssetStudio.csproj" />
     <ProjectReference Include="..\CloneDash\Clone Dash.csproj" />
   </ItemGroup>
