--- a/CloneDash/Clone Dash.csproj
+++ b/CloneDash/Clone Dash.csproj
@@ -20,6 +20,7 @@
 	<ItemGroup>
 		<PackageReference Include="DiscordRichPresence" Version="1.6.1.70" />
 		<PackageReference Include="BCnEncoder.Net" Version="2.2.1" />
+		<PackageReference Include="K4os.Compression.LZ4" Version="1.3.8" />
 		<PackageReference Include="LuaCSharp" Version="0.4.2" />
 		<PackageReference Include="Microsoft.Diagnostics.Runtime" Version="3.1.512801" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -34,12 +35,6 @@
 		<ProjectReference Include="..\Nucleus\Nucleus.csproj" />
 		<ProjectReference Include="..\OdinSerializer\OdinSerializer.csproj" />
 		<ProjectReference Include="..\Raylib-cs\Raylib-cs.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Reference Include="K4os.Compression.LZ4">
-			<HintPath>..\BuildAssets\universal\K4os.Compression.LZ4.dll</HintPath>
-		</Reference>
 	</ItemGroup>
 
 	<ItemGroup>
