--- a/Nucleus/Nucleus.csproj
+++ b/Nucleus/Nucleus.csproj
@@ -23,7 +23,7 @@
 		<PackageReference Include="TinyDialogsNet" Version="2.0.0" />
 	</ItemGroup>
 
-	<Import Project ="..\NucleusAssets.targets"/>
+	<Import Project ="$(MSBuildThisFileDirectory)\NucleusAssets.targets"/>
 	
 	<PropertyGroup Condition="'$(IsWindows)'=='true'">
 		<DefineConstants>COMPILED_WINDOWS</DefineConstants>
